--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,21 +1,21 @@
 {{ $data := or (index .Site.Data .Site.Language.Lang).content .Site.Data.content }}
 {{ .Scratch.Set "data" $data }}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ .Site.Language.LanguageCode }}">
     {{ partial "head.html" . }}
 <body>
     <div class="content">
-        {{ if .Site.Params.swapColumns }}
+        {{ if or (.Site.Params.swapColumns) (eq .Site.Language.LanguageDirection "rtl") }}
         <div class="content__left content__swapped__left">
         {{ else }}
         <div class="content__left">
         {{ end }}
-            <h1 class="mainHeading">{{ $data.BasicInfo.FirstName }} <span>{{ $data.BasicInfo.LastName }}</span></h1>
+        <h1 class="mainHeading">{{ $data.BasicInfo.FirstName }} <span>{{ $data.BasicInfo.LastName }}</span></h1>
             {{ partial "_profile.html" $data }}
             {{ partial "_experience.html" $data }}
             {{ partial "_education.html" $data }}
         </div>
-        {{ if .Site.Params.swapColumns }}
+        {{ if or (.Site.Params.swapColumns) (eq .Site.Language.LanguageDirection "rtl") }}
         <div class="content__right content__swapped__right">
         {{ else }}
         <div class="content__right">
@@ -25,6 +25,6 @@
             {{ partial "_skills.html" $data }}
             {{ partial "_diplomas.html" $data }}
         </div>
-    </div>    
+    </div>
 </body>
 </html>
